Zen (#9)
* fix any issues caused from changing String[] officer to Array<String> Officer and implement a generate report function in managerBoundary

* Applicant Boundary Finalised, Resolved project filtering bug

* Update ProjectRegistrationController.java

* converted applicant functions to static so officer can use it. Officer boundary finalised, fixed logic for officer to filter applied projects when registering and filter registered projects when applying

* tiny update

* Major update, simplify filters, ensure consistent viewing style for all manager/applicant/officer and applicant boundary now accepts officers to create an instance to use applicant functions

---------

Co-authored-by: Jarrel Ng <jngtx303@gmail.com>