@@ -1,6 +1,5 @@
 package Applicant;
 
-
 import java.time.LocalDate;
 import java.util.*;
 import java.util.function.Predicate;
@@ -8,6 +7,7 @@ import java.util.stream.Collectors;
 
 import Abstract.IUserProfile;
 import Enquiry.Enquiry;
+import Enquiry.EnquiryController;
 import Enumerations.EnquiryStatus;
 import Enumerations.MaritalStatus;
 import Manager.ManagerController;
@@ -17,25 +17,30 @@ import ProjectApplication.ProjectApplication;
 import ProjectApplication.ProjectApplicationController;
 import Reply.Reply;
 import Reply.ReplyController;
-import Utils.PredicateUtils;
+import Utils.ProjectFilterContext;
 import Utils.SafeScanner;
 import User.UserBoundary;
-import Enquiry.EnquiryController;
-
 
 public class ApplicantBoundary {
-    private Applicant applicant;
-    private static Predicate<Project> Filter = null;
-    private static Predicate<Project> neighbourhoodFilter = null;
-    private static Predicate<Project> flatTypeFilter = null;
-    private static String Filterneighbourhood = null;
-    private static String FilterflatType = null;
+    private final IUserProfile user;
+    private final ProjectFilterContext filterContext;
+
+    public ApplicantBoundary(IUserProfile user, ProjectFilterContext filterContext) {
+        this.user = user;
+        this.filterContext = filterContext;
+    }
 
     public ApplicantBoundary(Applicant applicant) {
-        this.applicant = applicant;
+        this.user = applicant;
+        this.filterContext = new ProjectFilterContext();
     }
 
     public void displayMenu() {
+        if (!(user instanceof Applicant applicant)) {
+            System.out.println("This menu is only available for applicants.");
+            return;
+        }
+
         int choice;
         Scanner sc = new Scanner(System.in);
         do {
@@ -51,192 +56,23 @@ public class ApplicantBoundary {
             choice = SafeScanner.getValidatedIntInput(sc, "Enter your choice: ", 0, 6);
 
             switch (choice) {
-                case 1 -> viewApplicantProfile();
-                case 2 -> displayProjectMenu(applicant);
-                case 3 -> applyForProject(applicant);
-                case 4 -> viewApplication(applicant);
+                case 1 -> viewApplicantProfile(applicant);
+                case 2 -> displayProjectMenu();
+                case 3 -> applyForProject();
+                case 4 -> viewApplication();
                 case 5 -> applicantEnquiryMenu(applicant);
                 case 6 -> UserBoundary.changePassword(applicant.getUserProfile());
-                case 0 -> System.out.println("Exiting the Applicant Menu.");
-                default -> System.out.println("Invalid choice. Please select a valid option.");
-            }
-        }
-        while (choice != 0 && choice !=6) ;
-        if (choice == 0){
-            sc.close();
-        }
-    }
-
-//User profile functions
-    public void viewApplicantProfile() {
-        Scanner sc = new Scanner(System.in);
-        String selection;
-        do {
-            Utils.PrettyPrint.prettyPrint(applicant);
-
-            List<String> validOptions = Arrays.asList("y", "n");
-            selection = SafeScanner.getValidatedStringInput(sc,"Would you like to update your profile?\nEnter: y/n\n",validOptions);
-            if (selection.equals("y")) {
-                updateApplicantProfile();
-            }
-        }while(!selection.equals("n"));
-
-    }
-
-    public void updateApplicantProfile() {
-        int choice;
-        Scanner sc = new Scanner(System.in);
-        do{
-            Utils.PrettyPrint.prettyUpdate(applicant);
-
-            choice = SafeScanner.getValidatedIntInput(sc, "Enter your choice: ", 0, 3);
-
-            switch (choice) {
-                case 1 -> updateName();
-                case 2 -> updateAge();
-                case 3 -> updateMaritalStatus();
                 case 0 -> System.out.println("Exiting...");
-                default -> System.out.println("Invalid choice. Please select a valid option.");
+                default -> System.out.println("Invalid choice.");
             }
         } while (choice != 0);
-
     }
 
-
-    private void updateAge(){
-        Scanner sc = new Scanner(System.in);
-        int age;
-        age = SafeScanner.getValidatedIntInput(sc, "Enter your new age: ", 0, 200);
-        if(ApplicantController.updateAge(applicant, age)){
-            System.out.println("Your age has been updated!\n");
-        }
-        else{
-            System.out.println("Update failed, try again later\n");
-        }
-    }
-
-    private void updateName(){
-        Scanner sc = new Scanner(System.in);
-        String newName = SafeScanner.getValidatedStringInput(sc,"Enter your new Name: ",50);
-        if(ApplicantController.updateName(applicant, newName)){
-            System.out.println("Your name has been updated!\n");
-        }
-        else{
-            System.out.println("Update failed, try again later\n");
-        }
-    }
-
-    private void updateMaritalStatus(){
-        Scanner sc = new Scanner(System.in);
-        List<String> validOptions = Arrays.asList("m", "s");
-        String maritalStatus = SafeScanner.getValidatedStringInput(sc,"Enter your marital status: ( m: Married , s: Single)\n", validOptions);
-        if(ApplicantController.updateMaritalStatus(applicant, maritalStatus)){
-            System.out.println("Your marital status has been updated!\n");
-        }
-        else{
-            System.out.println("Update failed, try again later\n");
-        }
-    }
-
-
-//Applications functions
-
-    public static <T extends IUserProfile> void applyForProject(T applicant) {
-        Scanner sc = new Scanner(System.in);
-        if (!ProjectApplicationController.checkPreviousApplication(applicant.getNric())) {
-            System.out.println("You have already submitted an Application Before.");
-            return;
-        }
-        if(applicant.getAge() < 21){
-            System.out.println("You must be older than 21 to apply.");
-            return;
-        }
-        if(applicant.getMaritalStatus() == MaritalStatus.SINGLE && applicant.getAge()<35){
-            System.out.println("Single applicants have to be 35 years old and above to apply.");
-            return;
-        }
-        if(ProjectController.getProjectsForApplicant(applicant).isEmpty()) {
-            System.out.println("No Projects available for applications at the moment.");
-        }
-
-        else {
-            System.out.println("\n=== Project Application ===");
-            System.out.println("Valid Projects:");
-            List<String> ValidprojIDs = ProjectController.getProjectIDsForApplicant(applicant);
-            System.out.println("ID: "+ValidprojIDs);
-            String projectID = SafeScanner.getValidatedStringInput(sc,"Enter Project ID you want to apply for: ",ValidprojIDs);
-            Project p = ProjectController.getProjectByID(projectID);
-            String roomType;
-            if(applicant.getMaritalStatus() == MaritalStatus.SINGLE){
-                roomType = "2-room";
-                p.prettyPrint4SingleApplicant();
-            }
-            else {
-                p.prettyPrint4MarriedApplicant();
-                List<String> validRoomTypes = Arrays.asList("2-room", "3-room");
-                roomType = SafeScanner.getValidatedStringInput(sc, "\nEnter a room type (2-Room or 3-Room): ", validRoomTypes);
-            }
-            // checks that at least 1 unit available for each type
-            if (roomType.equalsIgnoreCase("2-room")){
-                if(( p.getType1().equalsIgnoreCase("2-room") && p.getNoOfUnitsType1() < 1) ||( p.getType2().equalsIgnoreCase("2-room") && p.getNoOfUnitsType2() < 1) ){
-                    System.out.println("No 2-room units available for this project.");
-                    return;
-                }
-            } else if (roomType.equalsIgnoreCase("3-room")) {
-                if(( p.getType1().equalsIgnoreCase("3-room") && p.getNoOfUnitsType1() < 1) ||( p.getType2().equalsIgnoreCase("3-room") && p.getNoOfUnitsType2() < 1) ){
-                     System.out.println("No 3-room units available for this project.");
-                     return;
-                }
-            }
-            if (!ProjectApplicationController.createProjectApplication(projectID.toUpperCase(),roomType, applicant.getNric())){
-                System.out.println("Project application could not be created.");
-            }
-            else{
-                System.out.println("Application created successfully!");
-            }
-
-        }
-    }
-
-    public static <T extends IUserProfile> void viewApplication(T applicant) {
-        List<ProjectApplication> failApp = ProjectApplicationController.getUnsuccessApplicationByApplicantID(applicant.getNric());
-        ProjectApplication currentApp = ProjectApplicationController.getCurrentApplicationByApplicantID(applicant.getNric());
-        if (failApp.isEmpty() && currentApp == null) {
-            System.out.println("Application could not be found.");
-            return;
-        }
-        if(!failApp.isEmpty()){
-            System.out.println("\n________Unsuccessful Applications________");
-            for(ProjectApplication app : failApp){
-                app.prettyPrintApplicant();
-            }
-        }
-        if(currentApp != null){
-            System.out.println("\n__________Current Application__________");
-            currentApp.prettyPrintApplicant();
-            Project p = ProjectController.getProjectByID(currentApp.getProjectID());
-            System.out.println("\n________Project_________");
-            if(currentApp.getRoomType().equalsIgnoreCase("2-room")){
-                p.prettyPrint4SingleApplicant();
-            }
-            else{
-                p.prettyPrintApplicant3room();
-            }
-            Scanner sc = new Scanner(System.in);
-            System.out.println("\nEnter W to withdraw application,\nEnter anything else to go back: ");
-            String selection = sc.nextLine().trim();
-            if(selection.equalsIgnoreCase("W")){
-                withdrawApplication(applicant);
-            }
-        }
-    }
-
-//Project functions
-    public static <T extends IUserProfile> void displayProjectMenu(T applicant) {
+    public void displayProjectMenu() {
         Scanner sc = new Scanner(System.in);
         int choice;
         do {
-            System.out.println("\n===== Project Menu =====");
+            System.out.println("\n===== APPLICANT Project Menu =====");
             System.out.println("1. View available projects");
             System.out.println("2. View project you have applied to");
             System.out.println("3. Update filters");
@@ -244,103 +80,219 @@ public class ApplicantBoundary {
             choice  = SafeScanner.getValidatedIntInput(sc, "Enter option: ", 0, 3);
 
             switch (choice) {
-                case 1 -> displayAvailProjectsForApplicant(applicant);
-                case 2 -> displayAppliedProjects(applicant);
+                case 1 -> displayAvailProjectsForApplicant();
+                case 2 -> displayAppliedProjects();
                 case 3 -> displayProjectFilterMenu();
                 case 0 -> System.out.println("Exiting...");
                 default -> System.out.println("Invalid option.");
             }
-        }while(choice !=0);
+        } while (choice != 0);
     }
 
-    public static <T extends IUserProfile> void displayAppliedProjects(T applicant) {
-        List<ProjectApplication> applications =
-                ProjectApplicationController.getApplicationsByApplicantID(applicant.getNric());
-        if (!applications.isEmpty()) {
-            System.out.println("\nYou have applied to the following project"
-                    + (applications.size() > 1 ? "s:" : ":"));
-            for (ProjectApplication app : applications) {
-                Project p = ProjectController.getProjectByID(app.getProjectID());
-                if (applicant.getMaritalStatus() == MaritalStatus.SINGLE) {
-                    p.prettyPrint4SingleApplicant();
-                } else {
-                    p.prettyPrint4MarriedApplicant();
-                }
-                System.out.println("Manager-in-charge: " + ManagerController.getNameById(p.getManagerID()));
-                System.out.println("Status: " + app.getStatus());
-            }
-        }
-    }
-    public static <T extends IUserProfile> void displayAvailProjectsForApplicant(T applicant) {
-        List<Project> filteredProjects = ProjectController.getFilteredProjectsForApplicant(applicant,Filter);
+    private void displayAvailProjectsForApplicant() {
+        List<Project> filteredProjects = new ArrayList<>(
+                ProjectController.getFilteredProjectsForApplicant(user, filterContext.combinedFilter)
+        );
+
         if (filteredProjects.isEmpty()) {
             System.out.println("No projects are open to your user group.");
+            return;
+        }
+
+        System.out.println("\nFilters applied: " + filterContext.neighbourhood + " | " + filterContext.flatType);
+        Scanner sc = new Scanner(System.in);
+        System.out.println("\nEnter 'o' to sort by Opening Date,\n      'c' to sort by Closing Date\nEnter anything else to continue: ");
+        String selection = sc.nextLine().trim().toLowerCase();
+
+        switch (selection) {
+            case "c" -> filteredProjects.sort(Comparator.comparing(Project::getAppDateClose));
+            case "o" -> filteredProjects.sort(Comparator.comparing(Project::getAppDateOpen));
+        }
+
+        System.out.println("\n========= Projects Available =========");
+        for (Project proj : filteredProjects) {
+            printProjectForApplicant(user, proj);
+            System.out.println("Manager-in-charge: " + ManagerController.getNameById(proj.getManagerID()));
+        }
+
+        System.out.println("\nEnter 'A' to apply,\n      'E' to submit enquiry\nEnter anything else to go back: ");
+        selection = sc.nextLine().trim().toLowerCase();
+        if (selection.equals("e")) {
+            submitEnquiry(user.getNric());
+        } else if (selection.equals("a")) {
+            applyForProject();
+        }
+    }
+
+    private void displayAppliedProjects() {
+        List<ProjectApplication> applications =
+                ProjectApplicationController.getApplicationsByApplicantID(user.getNric());
+
+        if (applications.isEmpty()) {
+            System.out.println("No projects applied.");
+            return;
+        }
+
+        System.out.println("\nYou have applied to the following project" + (applications.size() > 1 ? "s:" : ":"));
+        for (ProjectApplication app : applications) {
+            Project p = ProjectController.getProjectByID(app.getProjectID());
+            printProjectForApplicant(user, p);
+            System.out.println("Manager-in-charge: " + ManagerController.getNameById(p.getManagerID()));
+            System.out.println("Status: " + app.getStatus());
+        }
+    }
+
+
+    public void applyForProject() {
+        Scanner sc = new Scanner(System.in);
+        if (!ProjectApplicationController.checkPreviousApplication(user.getNric())) {
+            System.out.println("You have already submitted an Application Before.");
+            return;
+        }
+        if (user.getAge() < 21 || (user.getMaritalStatus() == MaritalStatus.SINGLE && user.getAge() < 35)) {
+            System.out.println("You do not meet the age requirements.");
+            return;
+        }
+
+        List<Project> validProjects = ProjectController.getProjectsForApplicant(user);
+        if (validProjects.isEmpty()) {
+            System.out.println("No Projects available for applications at the moment.");
+            return;
+        }
+
+        System.out.println("\n=== Project Application ===");
+        List<String> ValidprojIDs = ProjectController.getProjectIDsForApplicant(user);
+        System.out.println("ID: " + ValidprojIDs);
+        String projectID = SafeScanner.getValidatedStringInput(sc, "Enter Project ID you want to apply for: ", ValidprojIDs);
+        Project p = ProjectController.getProjectByID(projectID);
+
+        String roomType;
+        if (user.getMaritalStatus() == MaritalStatus.SINGLE) {
+            roomType = "2-room";
+            p.prettyPrint4SingleApplicant();
         } else {
-            System.out.println("\n========= Projects Available =========");
-            for (Project proj : filteredProjects) {
-                if((applicant.getMaritalStatus() == MaritalStatus.SINGLE)){
-                    proj.prettyPrint4SingleApplicant();
-                } else if (FilterflatType == null) {
-                    proj.prettyPrint4MarriedApplicant();
-                } else if (FilterflatType.equalsIgnoreCase("3-room")) {
-                    proj.prettyPrintApplicant3room();
-                } else{
-                    proj.prettyPrint4SingleApplicant();
-                }
-                System.out.println("Manager-in-charge: "+ ManagerController.getNameById(proj.getManagerID()));
+            p.prettyPrint4MarriedApplicant();
+            roomType = SafeScanner.getValidatedStringInput(sc, "\nEnter a room type (2-Room or 3-Room): ", List.of("2-room", "3-room"));
+        }
+
+
+        if (!validateRoomAvailability(p, roomType)) return;
+
+        if (!ProjectApplicationController.createProjectApplication(projectID.toUpperCase(), roomType, user.getNric())) {
+            System.out.println("Project application could not be created.");
+        } else {
+            System.out.println("Application created successfully!");
+        }
+    }
+
+    private boolean validateRoomAvailability(Project p, String roomType) {
+        if (roomType.equalsIgnoreCase("2-room") &&
+                ((p.getType1().equalsIgnoreCase("2-room") && p.getNoOfUnitsType1() < 1)
+                        || (p.getType2().equalsIgnoreCase("2-room") && p.getNoOfUnitsType2() < 1))) {
+            System.out.println("No 2-room units available for this project.");
+            return false;
+        }
+        if (roomType.equalsIgnoreCase("3-room") &&
+                ((p.getType1().equalsIgnoreCase("3-room") && p.getNoOfUnitsType1() < 1)
+                        || (p.getType2().equalsIgnoreCase("3-room") && p.getNoOfUnitsType2() < 1))) {
+            System.out.println("No 3-room units available for this project.");
+            return false;
+        }
+        return true;
+    }
+
+    public void viewApplication() {
+        List<ProjectApplication> failApp = ProjectApplicationController.getUnsuccessApplicationByApplicantID(user.getNric());
+        ProjectApplication currentApp = ProjectApplicationController.getCurrentApplicationByApplicantID(user.getNric());
+
+        if (failApp.isEmpty() && currentApp == null) {
+            System.out.println("Application could not be found.");
+            return;
+        }
+
+        if (!failApp.isEmpty()) {
+            System.out.println("\n________Unsuccessful Applications________");
+            for (ProjectApplication app : failApp) {
+                app.prettyPrintApplicant();
             }
+        }
+
+        if (currentApp != null) {
+            System.out.println("\n__________Current Application__________");
+            currentApp.prettyPrintApplicant();
+            Project p = ProjectController.getProjectByID(currentApp.getProjectID());
+            System.out.println("\n________Project_________");
+            if (currentApp.getRoomType().equalsIgnoreCase("2-room")) {
+                p.prettyPrint4SingleApplicant();
+            } else {
+                p.prettyPrintApplicant3room();
+            }
+
             Scanner sc = new Scanner(System.in);
-            System.out.println("\nEnter A to apply,\n      E to submit enquiry\nEnter anything else to go back: ");
-            String selection = sc.nextLine().trim();
-            if(selection.equalsIgnoreCase("E")){
-                submitEnquiry(applicant.getNric());
-            }
-            else if(selection.equalsIgnoreCase("A")){
-                applyForProject(applicant);
+            System.out.println("\nEnter W to withdraw application,\nEnter anything else to go back: ");
+            if (sc.nextLine().trim().equalsIgnoreCase("W")) {
+                withdrawApplication();
             }
         }
     }
 
-    public static void displayProjectFilterMenu() {
+    private void withdrawApplication() {
+        ProjectApplication application = ProjectApplicationController.getCurrentApplicationByApplicantID(user.getNric());
+        if (application == null) {
+            System.out.println("No application to withdraw.");
+            return;
+        }
+        String confirm = SafeScanner.getValidatedStringInput(new Scanner(System.in), "Are you sure you want to withdraw? (y/n): ", List.of("y", "n"));
+        if (confirm.equalsIgnoreCase("y")) {
+            boolean success = ProjectApplicationController.withdrawApplication(user.getNric());
+            System.out.println(success ? "Application withdrawn." : "Withdrawal failed.");
+        }
+    }
+
+    private void displayProjectFilterMenu() {
         Scanner sc = new Scanner(System.in);
         int choice;
         do {
             System.out.println("\n=== Project Filter Menu ===");
-            System.out.println("1. Neighbourhood: "+Filterneighbourhood);
-            System.out.println("2. Flat Type: "+FilterflatType);
+            System.out.println("1. Neighbourhood: " + filterContext.neighbourhood);
+            System.out.println("2. Flat Type: " + filterContext.flatType);
             System.out.println("3. Reset Filters");
             System.out.println("0. Exit");
-            choice = SafeScanner.getValidatedIntInput(sc, "Enter your choice: ", 0, 3);
 
+            choice = SafeScanner.getValidatedIntInput(sc, "Enter your choice: ", 0, 3);
             switch (choice) {
                 case 1 -> {
-                    Filterneighbourhood = SafeScanner.getValidatedStringInput(sc,"Enter the neighbourhood: ",100);
-                    neighbourhoodFilter = project -> project.getNeighbourhood().equalsIgnoreCase(Filterneighbourhood);
+                    filterContext.neighbourhood = SafeScanner.getValidatedStringInput(sc, "Enter the neighbourhood: ", 100);
+                    filterContext.neighbourhoodFilter = p -> p.getNeighbourhood().equalsIgnoreCase(filterContext.neighbourhood);
                 }
                 case 2 -> {
-                    List<String> validRoomOptions = Arrays.asList("2-room", "3-room");
-                    FilterflatType = SafeScanner.getValidatedStringInput(sc, "Enter flat type filter(e.g.,2-Room,3-Room:)", validRoomOptions);
-                    flatTypeFilter = project -> ((project.getType1().equalsIgnoreCase(FilterflatType) && project.getNoOfUnitsType1()>0)||
-                            (project.getType2().equalsIgnoreCase(FilterflatType) && project.getNoOfUnitsType2()>0));
+                    filterContext.flatType = SafeScanner.getValidatedStringInput(sc, "Enter flat type (2-Room/3-Room):", List.of("2-room", "3-room"));
+                    filterContext.flatTypeFilter = p ->
+                            (p.getType1().equalsIgnoreCase(filterContext.flatType) && p.getNoOfUnitsType1() > 0)
+                                    || (p.getType2().equalsIgnoreCase(filterContext.flatType) && p.getNoOfUnitsType2() > 0);
                 }
                 case 3 -> {
-                    Filter = null;
-                    FilterflatType = null;
-                    Filterneighbourhood = null;
-                    neighbourhoodFilter = null;
-                    flatTypeFilter = null;
-                    System.out.println("Filter Reset.");
+                    filterContext.reset();
+                    System.out.println("Filters reset.");
                 }
-                case 0 -> {
-                    System.out.println("Filter preferences updated.");
-                    System.out.println("Exiting the Project Filter Menu.");
-                }
-                default -> System.out.println("Invalid choice. Please select a valid option.");
             }
+            filterContext.updateFilter();
         } while (choice != 0 && choice != 3);
-        Filter = PredicateUtils.combineFilters(neighbourhoodFilter, flatTypeFilter);
     }
 
+    private void printProjectForApplicant(IUserProfile user, Project proj) {
+        if (user.getMaritalStatus() == MaritalStatus.SINGLE) {
+            proj.prettyPrint4SingleApplicant();
+        } else if (filterContext.flatType == null) {
+            proj.prettyPrint4MarriedApplicant();
+        } else if ("3-room".equalsIgnoreCase(filterContext.flatType)) {
+            proj.prettyPrintApplicant3room();
+        } else {
+            proj.prettyPrint4SingleApplicant();
+        }
+    }
+
+    // Add back any applicant-only functions here like viewApplicantProfile, enquiry menus, etc...
     public static void applicantEnquiryMenu(Applicant applicant) {
         Scanner sc = new Scanner(System.in);
         int choice;
@@ -386,7 +338,7 @@ public class ApplicantBoundary {
         // Filter those that have replies
         List<Enquiry> repliedEnquiries = enquiries.stream()
                 .filter(e ->
-                    e.getStatus().equals(EnquiryStatus.REPLIED))
+                        e.getStatus().equals(EnquiryStatus.REPLIED))
                 .toList();
 
         if (repliedEnquiries.isEmpty()) {
@@ -479,29 +431,79 @@ public class ApplicantBoundary {
         System.out.println("Enquiry deleted successfully!");
     }
 
-    private static <T extends IUserProfile> void withdrawApplication(T applicant) {
-        ProjectApplication application = ProjectApplicationController.getCurrentApplicationByApplicantID(applicant.getNric());
 
-        if (application == null) {
-            System.out.println("No application to withdraw.");
-            return;
-        }
-
+    //User profile functions
+    public void viewApplicantProfile(Applicant applicant) {
         Scanner sc = new Scanner(System.in);
-        String confirm = SafeScanner.getValidatedStringInput(
-                sc, "Are you sure you want to withdraw your application? (y/n): ",
-                List.of("y", "n")
-        );
+        String selection;
+        do {
+            Utils.PrettyPrint.prettyPrint(applicant);
 
-        if (confirm.equalsIgnoreCase("y")) {
-            boolean success = ProjectApplicationController.withdrawApplication(applicant.getNric());
-            if (success) {
-                System.out.println("Application withdrawn successfully.");
-            } else {
-                System.out.println("Failed to withdraw the application.");
+            List<String> validOptions = Arrays.asList("y", "n");
+            selection = SafeScanner.getValidatedStringInput(sc,"Would you like to update your profile?\nEnter: y/n\n",validOptions);
+            if (selection.equals("y")) {
+                updateApplicantProfile(applicant);
             }
+        }while(!selection.equals("n"));
+
+    }
+
+    public void updateApplicantProfile(Applicant applicant) {
+        int choice;
+        Scanner sc = new Scanner(System.in);
+        do{
+            Utils.PrettyPrint.prettyUpdate(applicant);
+
+            choice = SafeScanner.getValidatedIntInput(sc, "Enter your choice: ", 0, 3);
+
+            switch (choice) {
+                case 1 -> updateName(applicant);
+                case 2 -> updateAge(applicant);
+                case 3 -> updateMaritalStatus(applicant);
+                case 0 -> System.out.println("Exiting...");
+                default -> System.out.println("Invalid choice. Please select a valid option.");
+            }
+        } while (choice != 0);
+
+    }
+
+
+    private void updateAge(Applicant applicant) {
+        Scanner sc = new Scanner(System.in);
+        int age;
+        age = SafeScanner.getValidatedIntInput(sc, "Enter your new age: ", 0, 200);
+        if(ApplicantController.updateAge(applicant, age)){
+            System.out.println("Your age has been updated!\n");
+        }
+        else{
+            System.out.println("Update failed, try again later\n");
         }
     }
+
+    private void updateName(Applicant applicant) {
+        Scanner sc = new Scanner(System.in);
+        String newName = SafeScanner.getValidatedStringInput(sc,"Enter your new Name: ",50);
+        if(ApplicantController.updateName(applicant, newName)){
+            System.out.println("Your name has been updated!\n");
+        }
+        else{
+            System.out.println("Update failed, try again later\n");
+        }
+    }
+
+    private void updateMaritalStatus(Applicant applicant) {
+        Scanner sc = new Scanner(System.in);
+        List<String> validOptions = Arrays.asList("m", "s");
+        String maritalStatus = SafeScanner.getValidatedStringInput(sc,"Enter your marital status: ( m: Married , s: Single)\n", validOptions);
+        if(ApplicantController.updateMaritalStatus(applicant, maritalStatus)){
+            System.out.println("Your marital status has been updated!\n");
+        }
+        else{
+            System.out.println("Update failed, try again later\n");
+        }
+    }
+
+
 
 
 }
